PG extension installation command
Introduces the `borealis-pg:extensions:install` command to install a Postgres extension for a specified add-on.

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,10 @@
   "extends": [
     "oclif",
     "oclif-typescript"
-  ]
+  ],
+  "reportUnusedDisableDirectives": true,
+  "rules": {
+    "indent": ["error", 2, {"SwitchCase": 1, "MemberExpression": 1}],
+    "no-negated-condition": "off"
+  }
 }
