--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-oclif-typescript": "^0.2.0",
+    "glob": "^7.1.7",
     "globby": "^11.0.4",
     "mocha": "^9.0.3",
     "nock": "^13.1.1",
