--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mocha": "^9.0.3",
     "nock": "^13.1.1",
     "nyc": "^15.1.0",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
