--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
   "rules": {
     "indent": ["error", 2, {"SwitchCase": 1, "MemberExpression": 1}],
     "no-negated-condition": "off",
+    "no-process-exit": "off",
+    "unicorn/no-abusive-eslint-disable": "off",
+    "unicorn/no-process-exit": "off",
     "valid-jsdoc": ["warn", {"requireParamType": false, "requireReturn": false, "requireReturnType": false}]
   }
 }
