--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@oclif/config": "^1.17.0",
     "cli-ux": "^5.6.3",
     "http-call": "^5.3.0",
+    "ssh2": "^1.3.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@types/chai-string": "^1.4.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.20.18",
+    "@types/ssh2": "^0.5.47",
     "chai": "^4.3.4",
     "chai-string": "^1.5.0",
     "eslint": "^7.32.0",
