Improve command documentation
Adds extended descriptions for the `borealis-pg:extensions:install` and `borealis-pg:tunnel` commands. Also un-capitalizes the first letter of each command description for consistency with the Heroku CLI and introduces custom descriptions for the command topics.

--- a/package.json
+++ b/package.json
@@ -68,7 +68,11 @@
     "bin": "oclif-example",
     "devPlugins": [
       "@oclif/plugin-help"
-    ]
+    ],
+    "topics": {
+      "borealis-pg": {"description": "manage Borealis Isolated Postgres add-ons"},
+      "borealis-pg:extensions": {"description": "manage Postgres extensions"}
+    }
   },
   "repository": "OldSneerJaw/borealis-pg-heroku-cli-plugin",
   "scripts": {
