Refactor proxy initialization
Moved the assignment of the TCP socket listener earlier and added some debug logging for various events.

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   ],
   "reportUnusedDisableDirectives": true,
   "rules": {
+    "@typescript-eslint/no-use-before-define": ["error", {"functions": false}],
     "indent": ["error", 2, {"SwitchCase": 1, "MemberExpression": 1}],
     "no-negated-condition": "off",
     "no-process-exit": "off",
