Recursively install extension dependencies
Adds a `--recursive`/`-r` flag to the `borealis-pg:extensions:install` command to allow it to automatically and recursively install a Postgres extension's dependencies, if any.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
     "declaration": true,
     "esModuleInterop": true,
     "importHelpers": true,
+    "lib": ["es2019", "es2020.bigint", "es2020.string", "es2020.symbol.wellknown"],
     "module": "commonjs",
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
-    "target": "es2017"
+    "target": "es2019"
   },
   "exclude": [
     "src/**/*.test.ts"
