--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "rules": {
     "@typescript-eslint/no-use-before-define": ["error", {"functions": false}],
     "indent": ["error", 2, {"SwitchCase": 1, "MemberExpression": 1}],
+    "no-else-return": "off",
     "no-negated-condition": "off",
     "no-process-exit": "off",
     "unicorn/no-abusive-eslint-disable": "off",
