--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@oclif/plugin-help": "^3.2.2",
     "@oclif/test": "^1.2.8",
     "@types/chai": "^4.2.21",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/chai-string": "^1.4.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.20.18",
     "@types/ssh2": "^0.5.47",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "chai-string": "^1.5.0",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^3.1.0",
