--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "oclif": {
     "commands": "./lib/commands",
-    "bin": "oclif-example",
+    "bin": "heroku",
     "devPlugins": [
       "@oclif/plugin-help"
     ],
