--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.20.18",
     "@types/ssh2": "^0.5.47",
+    "@types/supports-color": "^8.1.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-string": "^1.5.0",
@@ -72,8 +73,12 @@
       "@oclif/plugin-help"
     ],
     "topics": {
-      "borealis-pg": {"description": "manage Borealis Isolated Postgres add-ons"},
-      "borealis-pg:extensions": {"description": "manage Postgres extensions"}
+      "borealis-pg": {
+        "description": "manage Borealis Isolated Postgres add-ons"
+      },
+      "borealis-pg:extensions": {
+        "description": "manage Postgres extensions"
+      }
     }
   },
   "repository": "OldSneerJaw/borealis-pg-heroku-cli-plugin",
