--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "borealis-pg-heroku-cli-plugin",
-  "description": "Advanced interactions with Borealis Isolated Postgres add-ons",
+  "name": "borealis-pg-cli",
+  "description": "CLI for advanced interactions with Borealis Isolated Postgres add-ons",
   "version": "0.1.0",
   "author": "Borealis Data Solutions",
-  "bugs": "https://github.com/OldSneerJaw/borealis-pg-heroku-cli-plugin/issues",
+  "bugs": "https://github.com/OldSneerJaw/borealis-pg-cli/issues",
   "dependencies": {
     "@heroku-cli/command": "^8.5.0",
     "@oclif/command": "^1.8.0",
@@ -49,7 +49,7 @@
     "/oclif.manifest.json",
     "/yarn.lock"
   ],
-  "homepage": "https://github.com/OldSneerJaw/borealis-pg-heroku-cli-plugin",
+  "homepage": "https://github.com/OldSneerJaw/borealis-pg-cli",
   "keywords": [
     "oclif-plugin"
   ],
@@ -81,7 +81,7 @@
       }
     }
   },
-  "repository": "OldSneerJaw/borealis-pg-heroku-cli-plugin",
+  "repository": "OldSneerJaw/borealis-pg-cli",
   "scripts": {
     "clean": "rm -rf node_modules",
     "lint": "eslint . --ext .ts --config .eslintrc",
