--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
   "repository": "OldSneerJaw/borealis-pg-cli",
   "scripts": {
     "clean": "rm -rf node_modules",
-    "lint": "eslint . --ext .ts --config .eslintrc",
+    "lint": "eslint --max-warnings 0 --ext .ts --config .eslintrc .",
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "nyc mocha --forbid-only \"**/*.test.ts\"",
