--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@oclif/config": "^1.17.0",
     "cli-ux": "^5.6.3",
     "http-call": "^5.3.0",
+    "pg": "^8.7.1",
     "ssh2": "^1.4.0",
     "tslib": "^2.3.0"
   },
@@ -23,6 +24,7 @@
     "@types/chai-string": "^1.4.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.20.18",
+    "@types/pg": "^8.6.1",
     "@types/ssh2": "^0.5.47",
     "@types/supports-color": "^8.1.1",
     "chai": "^4.3.4",
@@ -87,7 +89,7 @@
     "lint": "eslint --max-warnings 0 --ext .ts --config .eslintrc .",
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
-    "test": "nyc mocha --forbid-only \"**/*.test.ts\"",
+    "test": "nyc mocha --forbid-only \"src/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md"
   }
 }
