Upgrade lint packages
Upgrades the eslint-config-oclif and eslint-config-oclif-typescript packages to their latest versions to take advantage of updated/improved detections. Also removes the dependency on the glob package and updated affected code to make use of globby, which already existed and serves a similar purpose.

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,22 @@
   ],
   "reportUnusedDisableDirectives": true,
   "rules": {
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-use-before-define": ["error", {"functions": false}],
+    "camelcase": ["warn", {"properties": "never"}],
     "indent": ["error", 2, {"SwitchCase": 1, "MemberExpression": 1}],
     "no-else-return": "off",
     "no-negated-condition": "off",
-    "no-process-exit": "off",
-    "unicorn/no-abusive-eslint-disable": "off",
-    "unicorn/no-process-exit": "off",
-    "valid-jsdoc": ["warn", {"requireParamType": false, "requireReturn": false, "requireReturnType": false}]
+    "node/no-extraneous-import": "off",
+    "node/no-missing-import": "off",
+    "unicorn/no-array-reduce": "off",
+    "unicorn/prefer-module": "off",
+    "unicorn/prefer-node-protocol": "off",
+    "unicorn/prefer-object-from-entries": "off",
+    "unicorn/prefer-switch": "off",
+    "valid-jsdoc": [
+      "warn",
+      {"requireParamType": false, "requireReturn": false, "requireReturnType": false}
+    ]
   }
 }
