--- a/package.json
+++ b/package.json
@@ -6,40 +6,41 @@
   "bugs": "https://github.com/OldSneerJaw/borealis-pg-cli/issues",
   "dependencies": {
     "@heroku-cli/command": "^8.5.0",
-    "@oclif/command": "^1.8.0",
-    "@oclif/config": "^1.17.0",
-    "cli-ux": "^5.6.3",
+    "@oclif/command": "^1.8.16",
+    "@oclif/config": "^1.18.3",
+    "chalk": "^2.4.2",
+    "cli-ux": "^5.6.7",
     "http-call": "^5.3.0",
-    "pg": "^8.7.1",
-    "ssh2": "^1.5.0",
+    "pg": "^8.7.3",
+    "ssh2": "^1.6.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@heroku-cli/schema": "^1.0.25",
-    "@oclif/dev-cli": "^1.26.0",
-    "@oclif/plugin-help": "^3.2.3",
-    "@oclif/test": "^1.2.8",
-    "@types/chai": "^4.2.22",
-    "@types/chai-as-promised": "^7.1.4",
+    "@oclif/dev-cli": "^1.26.10",
+    "@oclif/plugin-help": "^3.3.1",
+    "@oclif/test": "^1.2.9",
+    "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/chai-string": "^1.4.2",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^12.20.33",
-    "@types/pg": "^8.6.1",
-    "@types/ssh2": "^0.5.48",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^12.20.46",
+    "@types/pg": "^8.6.4",
+    "@types/ssh2": "^0.5.51",
     "@types/supports-color": "^8.1.1",
-    "chai": "^4.3.4",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-string": "^1.5.0",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.2",
-    "globby": "^11.0.4",
-    "mocha": "^9.1.2",
-    "nock": "^13.1.3",
+    "globby": "^11.1.0",
+    "mocha": "^9.2.1",
+    "nock": "^13.2.4",
     "nyc": "^15.1.0",
     "ts-mockito": "^2.6.1",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.6.0",
+    "typescript": "~4.4.4"
   },
   "resolutions": {
     "ansi-regex": "^5.0.1"
