Message to disregard node-gyp error during install
The ssh2 package attempts to use the node-gyp package to build CPU-specific optimizations from the cpu-features package at install time. However, some systems do not have `cmake` installed, which leads to an error message with a stack trace from the node-gyp package in stderr. Since cpu-features is entirely optional, installation proceeds normally. But the error message can be confusing to end users when they install this CLI plugin, so the current package now outputs its own message to stderr during installation explaining that the error can safely be ignored.

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
   "scripts": {
     "clean": "rm -rf node_modules",
     "lint": "eslint --max-warnings 0 --ext .ts --config .eslintrc .",
+    "install": "node -e 'console.warn(\"NOTE: It is safe to ignore errors from gyp in the preceding output\")'",
     "postpack": "rm -f oclif.manifest.json",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "nyc mocha --forbid-only 'src/**/*.test.ts'",
