Add-on info command
The new command retrieves and prints vital details about an add-on DB from the Borealis Isolated Postgres API.

--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
         "description": "manage Borealis Isolated Postgres add-ons"
       },
       "borealis-pg:extensions": {
-        "description": "manage Postgres extensions"
+        "description": "manage Borealis Isolated Postgres add-on Postgres extensions"
       }
     }
   },
