Document language element in CodeQL config
Just to make it crystal clear that TypeScript code is indeed covered by CodeQL scanning.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -24,7 +24,7 @@ jobs:
       fail-fast: false
       matrix:
         language:
-          - javascript
+          - javascript # TypeScript is covered by the JavaScript language scanner
 
     steps:
     - name: Checkout repository
