--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "author": "Boreal Information Systems Inc.",
   "bugs": "https://github.com/OldSneerJaw/borealis-pg-cli/issues",
   "dependencies": {
-    "@heroku-cli/command": "^8.5.0",
-    "@oclif/command": "^1.8.21",
-    "@oclif/config": "^1.18.6",
+    "@heroku-cli/command": "^9.0.1",
+    "@oclif/core": "^1.26.1",
     "chalk": "^2.4.2",
-    "cli-ux": "^5.6.7",
     "dotenv": "^16.0.3",
     "http-call": "^5.3.0",
     "pg": "^8.7.3",
@@ -60,6 +58,7 @@
     "oclif-plugin"
   ],
   "license": "MIT",
+  "main": "lib/index.js",
   "nyc": {
     "all": true,
     "reporter": [
