--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "chalk": "^2.4.2",
     "dotenv": "^16.0.3",
     "http-call": "^5.3.0",
-    "pg": "^8.7.3",
+    "pg": "^8.8.0",
     "ssh2": "^1.11.0",
     "tslib": "^2.4.1"
   },
@@ -18,7 +18,7 @@
     "@heroku-cli/schema": "^1.0.25",
     "@oclif/dev-cli": "^1.26.10",
     "@oclif/plugin-help": "^5.2.1",
-    "@oclif/test": "^1.2.9",
+    "@oclif/test": "~2.2.21",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-string": "^1.4.2",
@@ -32,7 +32,7 @@
     "chai-string": "^1.5.0",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4.0.0",
-    "eslint-config-oclif-typescript": "^1.0.2",
+    "eslint-config-oclif-typescript": "^1.0.3",
     "globby": "^11.1.0",
     "mocha": "^10.2.0",
     "nock": "^13.3.0",
