--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "chalk": "^2.4.2",
     "dotenv": "^16.0.3",
     "http-call": "^5.3.0",
+    "luxon": "^3.2.1",
+    "node-notifier": "^10.0.1",
     "pg": "^8.9.0",
     "ssh2": "^1.11.0",
     "tslib": "^2.5.0"
@@ -21,8 +23,10 @@
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-string": "^1.4.2",
+    "@types/luxon": "^3.2.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^12.20.55",
+    "@types/node-notifier": "^8.0.2",
     "@types/pg": "^8.6.6",
     "@types/ssh2": "^1.11.7",
     "@types/supports-color": "^8.1.1",
