--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "@heroku-cli/command": "^10.0.0",
     "@oclif/core": "^2.8.11",
-    "chalk": "^2.4.2",
     "dotenv": "^16.3.1",
     "http-call": "^5.3.0",
     "luxon": "^3.3.0",
@@ -19,7 +18,7 @@
   "devDependencies": {
     "@heroku-cli/schema": "^1.0.25",
     "@oclif/dev-cli": "^1.26.10",
-    "@oclif/test": "~2.2.21",
+    "@oclif/test": "^2.3.26",
     "@types/chai": "^4.3.5",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-string": "^1.4.2",
@@ -33,6 +32,7 @@
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "chai-string": "^1.5.0",
+    "chalk": "^2.4.2",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.3",
