--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   },
   "devDependencies": {
     "@heroku-cli/schema": "^1.0.25",
-    "@oclif/dev-cli": "^1.26.10",
-    "@oclif/test": "^2.3.26",
+    "@oclif/test": "^2.5.6",
     "@types/chai": "^4.3.6",
     "@types/chai-as-promised": "^7.1.6",
     "@types/chai-string": "^1.4.3",
+    "@types/glob": "^8.1.0",
     "@types/luxon": "^3.3.2",
     "@types/mocha": "^10.0.2",
-    "@types/node": "^12.20.55",
+    "@types/node": "^16.18.57",
     "@types/node-notifier": "^8.0.3",
     "@types/pg": "^8.10.3",
     "@types/ssh2": "^1.11.14",
