--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,11 @@ updates:
     directory: /
     schedule:
       interval: daily
+    groups:
+      production-dependencies:
+        dependency-type: production
+      development-dependencies:
+        dependency-type: development
     versioning-strategy: increase
 
   # Actions used in GitHub Workflows
