Update VS Code save setting for eslint
Matches the updated format for configuring Visual Studio Code to apply eslint fixes automatically on save.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "editor.formatOnSaveMode": "file"
   },
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   },
   "files.trimFinalNewlines": true,
   "typescript.format.enable": true,
