--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "Boreal Information Systems Inc.",
   "bugs": "https://github.com/OldSneerJaw/borealis-pg-cli/issues",
   "dependencies": {
+    "@heroku/http-call": "^5.4.0",
     "@heroku-cli/command": "^11.4.0",
     "@oclif/core": "^2.16.0",
     "dotenv": "^16.4.7",
-    "http-call": "^5.3.0",
     "luxon": "^3.5.0",
     "node-notifier": "^10.0.1",
     "pg": "^8.13.1",
