Ditch npm publish action
The `JS-DevTools/npm-publish` action was silently failing to build the project for some reason, so it has been abandoned entirely in favour of running `npm publish` directly. Also now includes [provenance](https://github.blog/security/supply-chain-security/introducing-npm-package-provenance/) for the package when publishing to npm's registry.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,8 @@ jobs:
         run: yarn install --immutable --immutable-cache --check-cache
 
       - name: Publish to npm
-        uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          npm config set "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
+          npm publish --provenance
